<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedProfileFragment">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:orientation="vertical"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/pfp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                tools:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4dp"
                android:text="@string/ryn_nzf"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/dots"
                android:src="@drawable/dots" />

        </LinearLayout>

        <ImageView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content"
            android:scaleType="fitStart"
            android:src="@drawable/img1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="2dp"
                android:contentDescription="@string/like"
                android:src="@drawable/like" />

            <TextView
                android:id="@+id/like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="2dp"
                android:text="@string/total_like"
                android:textColor="@color/text"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/comment"
                android:src="@drawable/comment" />

            <TextView
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="2dp"
                android:text="@string/total_comment"
                android:textColor="@color/text"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/send"
                android:src="@drawable/send" />

            <TextView
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="2dp"
                android:text="@string/total_send"
                android:textColor="@color/text"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/save"
                android:src="@drawable/save" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/liked_by"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                tools:src="@drawable/ic_launcher_background" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:text="@string/liked_by"
                android:textColor="@color/text"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="3dp"
            android:text="@string/date"
            android:textColor="@color/text2"
            android:textSize="12sp" />

    </LinearLayout>
</ScrollView>

</FrameLayout>