<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal"
        android:paddingVertical="12dp"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/homeImg"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/home"
            android:src="@drawable/home" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:contentDescription="@string/search"
            android:src="@drawable/search" />

        <ImageView
            android:id="@+id/postImg"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/post"
            android:src="@drawable/post" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:contentDescription="@string/reels"
            android:src="@drawable/reels" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePhotoImg"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/profile"
            android:src="@drawable/pfp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>