<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:orientation="vertical"
        tools:context=".ProfileActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:text="@string/ryn_nzf"
                android:textColor="@color/text"
                android:textSize="30sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/hamburger"
                android:src="@drawable/hamburger" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilePicture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="25dp"
                android:src="@drawable/pfp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/ray"
                android:textColor="@color/text"
                android:textSize="22sp"
                app:layout_constraintStart_toEndOf="@id/profilePicture"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll_posts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/profilePicture"
                app:layout_constraintTop_toBottomOf="@id/name">

                <TextView
                    android:id="@+id/sum_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_count"
                    android:textColor="@color/text"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/posts"
                    android:textColor="@color/text"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/ll_posts"
                app:layout_constraintTop_toBottomOf="@id/name">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_count"
                    android:textColor="@color/text"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textColor="@color/text"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/ll_followers"
                app:layout_constraintTop_toBottomOf="@id/name">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_count"
                    android:textColor="@color/text"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following_"
                    android:textColor="@color/text"
                    android:textSize="22sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/lorem"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:weightSum="12">

            <TextView
                android:id="@+id/editProfileText"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="5"
                android:background="@drawable/bg_button_profile"
                android:clickable="true"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:text="@string/edit_profile"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/shareProfile"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="5"
                android:background="@drawable/bg_button_profile"
                android:clickable="true"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:text="@string/share_profile"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/add"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="2"
                android:background="@drawable/bg_button_profile"
                android:clickable="true"
                android:contentDescription="@string/addbtn"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:src="@drawable/add" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/story_highlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:itemCount="1"
            tools:listitem="@layout/story_item" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/grid" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/reels" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/tag_profiles" />
        </LinearLayout>

        <View
            android:layout_width="50dp"
            android:layout_height="3dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/text2" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_profile_feed"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:padding="2dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"
            tools:listitem="@layout/feed_profile_item"/>
    </LinearLayout>
</FrameLayout>